# rust-proyect

./: README.md
log_analyzer/: Cargo.toml
log_analyzer/src/: cli.rs  main.rs  model.rs  parser.rs
log_analyzer/ui/: index.html  main.js
log_reader/: .gitignore  Cargo.toml
log_reader/logs/: log.txt
log_reader/src/: main.rs
new_world/: Cargo.toml
