[package]
name = "log_analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
# For building powerful Command Line Interfaces.
clap = { version = "4.5.4", features = ["derive"] }

# For handling dates and times.
chrono = "0.4.38"

# For adding colors to terminal output.
colored = "2.1.0"

# For using regular expressions to parse log lines.
regex = "1.10.4"